|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-16 Raphael Geissert
    - MAKEFILES:
        * Fixed #782: cannot stat `./setup/vhcs2ispcp.pl': No such file or directory

2007-10-16 Benedikt Heintel
	- DISTS:
		* Updated ubuntu
	- ENGINE:
		* Fixed #7: Improvement of static AWStats
		* Fixed #7: Removed static dirs from conf filess
		* Fixed #55: Part I: Update Script from VHCS 2.4.7.1 to ispCP ω 1.0.0
		* Fixed #781: htdocs folder is empty (on new installed domain)
		* Fixed #779: Makefile Error
		* Deleted: Old SASL vaiables and use of them

2007-10-16 Malte Geierhos
	- DATABASE:
		* Fixed #780: sql error during setup

2007-10-15 Raphael Geissert
    - LANGUAGES:
        * Updated Czech translation (thanks to Josef Pinc)
        * Updated German translation (thanks to the German translation team)
        * Updated the A=B files

2007-10-15 Benedikt Heintel
	- DOCS:
		* Updated: Fedora install script
	- ENGINE:
		* Fixed: Prevented Sub-/Alias-/Domainmanager from creating index.html, if directory exists
		* Fixed #774: AWStats not working
	- DATABASE
		* changed English language: Added drop

2007-10-15 Malte Geierhos
	- SETUP:
		* fixed #771 according to joximu
	- ENGINE:
		* fixed #773 perl errors in dmn-mngr

2007-10-15 Johannes Schobig
	- SETUP:
		* Ask before generating passwords

2007-10-14 Raphael Geissert
    - ENGINE:
        * Fixed #767: Backup folder under domain-aliases
        * Fixed #768: scripts delayed because of empty entropy pool
        * Removed suggesting main sql user password
        * Improved fix for #768
        * Correctly load the new db keys when generated (also reported in #768)
    - GUI:
        * Fixed curlang()
    - MAKEFILE:
        * Fixed error where fastcgi_ispcp.conf was installed in an incorrect directory

2007-10-14 Malte Geierhos
	- GUI: