@@ -9,6 +9,8 @@ ispCP ω 1.0.0 Changelog
 2007-10-16 Raphael Geissert
     - MAKEFILES:
         * Fixed #782: cannot stat `./setup/vhcs2ispcp.pl': No such file or directory
+    - ENGINE:
+        * Improved entropy pool seeding code
 
 2007-10-16 Benedikt Heintel
 	- DISTS:
